Tue May 17 08:46:33 2005  Chad Elliott  <elliott_c@ociweb.com>

        * clone_build_tree.pl:

          Avoid linking patch reject files.

        * templates/vc8.mpd:

          1) Added vcprojecttype default similar to vc7.mpd.
          2) Changed all occurrances of Optimization to optimize.
          3) Added the 'dependencies' settings as was done for vc7.mpd.

        * templates/vc8dll.mpt:

          Changed all occurrances of Optimization to optimize.

Tue May 17 06:48:59 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/VC7ProjectCreator.pm:
        * templates/vc7.mpd:

          After suggesting a simplification to Johnny for the previous
          change, I relized that it could be simplified even more by setting
          the default in the mpd and not modifying any code.

        * templates/make.mpd:

          Added support for source files with spaces in the name.

        * templates/nmake.mpd:

          Added support for 'install' settings with spaces in the name.

Mon May 16 18:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc7.mpd:
        * modules/VC7ProjectCreator.pm:
          For Visual C++ the project type is Visual C++, but the Intel compiler
          can also be integrated into Visual Studio and then uses the same
          template but just a different project type. Made it possible to
          generate a different project type with an Intel C++ geneator we
          are working on.

Mon May 16 11:36:29 2005  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Driver.pm:

          Modified the time printout to just print the amount of time taken
          at the end of each file or project type and then the total time at
          the end.

        * modules/ProjectCreator.pm:

          Do not attempt to use the language setting if it hasn't been set.
          This only happens when the -recurse option is used with mpc.pl.

        * modules/TemplateParser.pm: